# AI-Knowledge-Base

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/v1/: documents.py  health.py
app/db/: database.py  models.py
app/schemas/: document.py
